# aizotero

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  lefthook.yml  pyproject.toml
app/: main.py
app/api/v1/: arxiv.py  chat.py  papers.py  zotero.py
app/core/: config.py
app/data/: sample_data.py
app/models/: arxiv.py  paper.py
app/services/: arxiv_service.py  database.py  pdf_parser.py  zotero_connector.py  zotero_service.py
app/tests/: test_main.py
docs/: 0001-design.md  0002-frontend-ai-design.md  0003-zotero-connector-api.md  0004-save-arxiv-to-zotero-design.md
frontend/: .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  env.d.ts
frontend/src/assets/: main.css
frontend/src/components/: AIChat.vue  AIChatInput.vue  AIConfig.vue  ArxivHoverPopup.vue  ArxivInput.vue  PdfViewer.test.ts  PdfViewer.vue
frontend/src/composables/: usePdfNavigation.ts
frontend/src/router/: index.ts
frontend/src/services/: aiService.ts  arxivService.ts  zoteroService.ts
frontend/src/stores/: aiStore.ts
frontend/src/utils/: debounce.ts  marked-katex-custom.test.ts  marked-katex-custom.ts
frontend/src/views/: MarkdownTest.vue  PaperList.vue  PaperReader.test.ts  PaperReader.vue
